# intermediate-project

./: .gitignore  .pre-commit-config.yaml  GitHub-PR-Checklist.md  LICENSE  README.md  SetProjectPackage.ipynb  backup_env.sh  commit_env_snapshot.sh  pipeline.py  pyproject.toml  서버_복구_가이드.md  프로젝트_패키지_설정_가이드.md
.github/: labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: CollaborationLog.yml  협업 일지.yml  협업-일지.yml  협업일지.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment.yml  feature_task.yml
.github/workflows/: ci.yml  notebook-check.yml
deploy/: apt_packages.txt  backup_meta.txt
deploy/jupyterhub/: jupyterhub_config.py
deploy/systemd/: jupyterhub.service  ollama.service  rfp-api.service  rfp-frontend.service
deploy/venv_freeze/: jhub-venv.txt
docs/: Codeit AI 10기 중급 프로젝트 구조도.drawio  README.md  architecture.md  파서_parity_검증_보고서.md
eval/: README.md  eval_criteria.md  metrics.py  run_eval.py  run_eval_full_semantic.py
eval/golden_dataset/: golden_dataset_v2.csv
frontend/: README.md  api_client.py  app.py
frontend/.streamlit/: config.toml
frontend/views/: rag_query.py  upload_check.py
golden/: D001 (6).json  D008 (1).json  D026 (2).json  D043 (1).json
notebooks/: README.md
notebooks/eval/: README.md
notebooks/llm/: README.md  RFP_RAG_Generation_Model_Selection.ipynb  RFP_RAG_Generation_Model_Selection_V2.ipynb  exaone_prompt_improvement.ipynb  generation_model_selection.ipynb  rag_integration_experiment.ipynb  upper_model_comparison.ipynb
notebooks/parsing/: D026_unparsed_fix.ipynb  D043_unparsed_fix.ipynb  EDA.ipynb  README.md  [Phase1]preprocessing_pipeline.ipynb  [Phase2]preprocessing_pipeline.ipynb
notebooks/retrieval/: README.md  chunk1000_prefix_test.ipynb  chunk500_prefix_test.ipynb  chunk_parent_child_test.ipynb  chunk_strategy_test.ipynb  chunk_toc_test.ipynb  hybrid_morpheme_processor_test.ipynb  hybrid_rrf_morpheme_k.ipynb  hybrid_rrf_morpheme_reranker_test.ipynb  hybrid_test.ipynb  reranker_test.ipynb  retrieval_chunk_size_test.ipynb  retrieval_model_test.ipynb  retrieval_pipeline.ipynb  table_chunk_boost.ipynb  table_key_value.ipynb
notebooks/test/: OpenAIAPITest.ipynb  README.md
output/docs/: 고려대학교_차세대 포털·학사 정보시스템 구축사업 (1).json  대전대학교_대전대학교 2024학년도 다층적 융합 학습경험 플랫폼(MILE) 전.json  한국농어촌공사_아세안+3 식량안보정보시스템(AFSIS) 3단계 협력(캄보디아.json  한영대학_한영대학교 특성화 맞춤형 교육환경 구축 - 트랙운영 학사정보 (1).json
parity_out/: parity_env.txt
parity_out/docs/: D001.json  D008.json  D026.json  D043.json
scripts/: README.md  apply-labels.sh  convert_notebooks.py  parity_check_parsing.py  setup-github.sh  verify_editable_install.py
src/: README.md
src/api/: README.md  config.py  dependencies.py  interfaces.py  lifespan.py  main.py  mock.py  schemas.py
src/api/routers/: rag.py  upload.py
src/rag_core/: README.md  __init__.py  interfaces.py  schemas.py
src/rag_core/chunking/: README.md  chunker.py
src/rag_core/embedding/: README.md  embedder.py
src/rag_core/llm/: README.md  pipeline.py
src/rag_core/orchestration/: langgraph_router.py  orchestrator.py
src/rag_core/parsing/: README.md  __init__.py  parity_run.py  parser.py  pipeline.py
src/rag_core/prompts/: README.md  builder.py
src/rag_core/prompts/templates/: prompt_template_multi_v1.txt  prompt_template_v1.txt
src/rag_core/retrieval/: README.md  __init__.py  retriever.py
tests/: README.md  test_chunker.py  test_parity_check_parsing.py  test_parser.py
tests/api/: test_docs.py  test_rag.py  test_upload.py
tests/frontend/: test_api_client.py
utils/: GitCommands.ipynb  README.md
