# pyproject.toml
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intermediate-project"
version = "0.1.0"
description = "RAG-based RFP generation system"
requires-python = ">=3.12"

# 런타임 의존성 (api 목업 + rag_core 계약/청킹에 필요한 최소 집합)
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",       # api: /upload 멀티파트 폼(UploadFile) 처리
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
]

# 개발 및 테스트 추가 의존성
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "nbconvert>=7.0.0",
    "ipykernel>=6.0.0",
]
# rag_core retrieval/embedding 무거운 의존성 (torch 계열). 필요 시: pip install -e ".[retrieval]"
retrieval = [
    "chromadb>=0.4.0",
    "langchain-chroma>=0.1.0",        # retrieval: Chroma 벡터스토어 래퍼
    "langchain-huggingface>=0.1.0",   # embedding: HuggingFaceEmbeddings (bge-m3)
    "langchain-openai>=0.1.0",        # embedding: OpenAIEmbeddings
    "sentence-transformers>=2.2.0",   # retrieval: CrossEncoder 리랭커
]
# rag_core parsing 무거운 의존성 (HWP/PDF 추출). 필요 시: pip install -e ".[parsing]"
# pyhwp는 0.1b15 핀 (구버전이라 상위 버전 호환 불확실 — Python 3.12 빌드는 확인됨).
parsing = [
    "pyhwp==0.1b15",         # parsing: HWP (hwp5.xmlmodel API + hwp5proc CLI)
    "python-docx>=1.0.0",    # parsing: LibreOffice HWP→DOCX 폴백 경로
    "pdfplumber>=0.11.0",    # parsing: PDF 표 영역 분리 추출
    "lxml>=5.0.0",           # parsing: HWP XML 파싱
    "pandas>=2.0.0",         # parsing: CSV 메타데이터 전처리
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

# src 레이아웃: src/ 하위의 패키지(api, rag_core)를 최상위 import 이름으로 노출.
# 따라서 코드는 `import rag_core` / `from api import ...` 형태로 사용한다 (src. 접두어 없음).
[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
files = ["src/rag_core", "src/api"]

mypy_path = "src"

ignore_missing_imports = false   # 내부 코드엔 엄격하게
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# 점진 도입: 처음엔 아래 두 줄을 끄고 시작했다가 단계적으로 적용
# disallow_untyped_defs = true
# disallow_incomplete_defs = true

# 외부 대형 의존성 라이브러리 예외 처리 (CI 속도 최적화 및 패키지 미설치 대비)
[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "langchain.*",
    "langchain_chroma.*",
    "langchain_huggingface.*",
    "langchain_openai.*",
    "torch.*",
    "rank_bm25.*",
    "kiwipiepy.*",
    "numpy.*",
    # parsing extra (CI lint job엔 미설치 → 임포트 해석 불가하므로 무시)
    "hwp5.*",
    "docx.*",
    "pdfplumber.*",
    "lxml.*",
    "pandas.*",
]
ignore_missing_imports = true